Implementando o SideBar do Spotify

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- Links para trazer os ícones via CDN -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
+    integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
+    integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
 </head>
 <body>
-    <h1>Spotify</h1>
     <div class="sidebar">
         <nav class="sidebar_navigation">
             <div class="logo">
                 <a href="">
-                    <img src="./assets/icons/logo-spotify.png" alt="">
+                    <img src="./assets/icons/logo-spotify.png" alt="Logo">
                 </a>
                 <div>
                     <ul>
@@ -28,7 +29,7 @@
                             </a>
                         </li>
                         <li><a href="">
-                            <span class="fa fa-home"></span>
+                            <span class="fa fa-search"></span>
                             <span>Buscar</span>
                         </a>
                     </li>
