Melhorando a Sua biblioteca

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 
 </head>
 
@@ -25,13 +25,13 @@
             <ul>
                 <li>
                     <a href="">
-                        <span class="fa fa-home"></span>
+                        <span class="fas fa-home"></span>
                         <span>Início</span>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <span class="fa fa-search"></span>
+                        <span class="fas fa-search"></span>
                         <span>Buscar</span>
                     </a>
                 </li>
@@ -43,9 +43,9 @@
         <nav class="library_navigation">
             <div class="topic_library">
                 <a href="">
-                    <span class="fa-solid fa-book"></span>
-                    <span>Sua biblioteca</span>
-                    <span class="fa-solid fa-plus"></span>
+                    <span class="fas fa-book"></span>
+                    <span class="biblio">Sua biblioteca</span>
+                    <span class="fas fa-plus"></span>
                 </a>
             </div>
             <div class="playlist">
@@ -56,8 +56,8 @@
             <div class="cookies">
                 <p>Cookies</p>
                 <div class="idioma">
-                    <span class="fa-solid fa-globe"></span>
-                    <button>Portugues do Brasil</button>
+                    
+                    <button><span class="fas fa-globe"></span>  Portugues do Brasil</button>
                 </div>
             </div>
         </nav>
